<resources>
    <string name="app_name">Indo Ali</string>
    <string name="aonde_vamos">Aonde vamos?</string>
    <string name="distancia">Distância</string>
    <string name="insertEmail">Digite o seu e-mail</string>
    <string name="insertPassword">Digite a sua senha</string>
    <string name="login">Login</string>
    <string name="signup">Cadastre-se</string>
    <string name="register">Cadastrar</string>
    <string name="rememberLogin">Lembrar login</string>
    <string name="passwordConfirmation">Confirme a sua senha</string>
    <string name="insertDestiny">Insira o seu destino</string>
    <string name="insertData">Insira a data</string>
    <string name="analyze">Analisar</string>
    <string name="insertYourName">Digite o seu nome</string>
    <string name="planeTransport">Transporte avião</string>
    <string name="values">Valores</string>
    <string name="estimatedCostPerPerson">Custo estimado por pessoa</string>
    <string name="vehicleRental">Aluguel de veículo</string>
    <string name="totalPeoples">Total de viajantes</string>
    <string name="travelDuration">Duração da viagem</string>
    <string name="meals">Refeições</string>
    <string name="carTransport">Transporte carro</string>
    <string name="estimatedTotalKm">Total estimado de quilômetros</string>
    <string name="averageKmPerLiter">Média de quilômetros por litro</string>
    <string name="averageCostPerLiter">Custo médio por litro</string>
    <string name="numberOfVehicles">Quantidade de veículos</string>
    <string name="addEntertainment">Adicionar novo entretenimento</string>
    <string name="entertainment">Entretenimento</string>
    <string name="resume">Resumo</string>
    <string name="goBack">Voltar</string>
    <string name="estimatedCostPerMeal">Custo estimado por refeição</string>
    <string name="quantityOfMealPerDay">Quantidade de refeição por dia</string>
    <string name="accommodation">Hospedagem</string>
    <string name="entertainmentName">Nome do entretenimento </string>
    <string name="price">Preço</string>
    <string name="amountOfPeople">Quantidade de pessoas</string>
    <string name="paoDeAcucar">Pão de açúcar</string>
    <string name="time">Horário</string>
    <string name="destination">Destino</string>
    <string name="date">Data</string>
    <string name="plane">Avião</string>
    <string name="totalAirfareCost">Custo total tarifa aérea: R$ %s</string>
    <string name="car">Carro</string>
    <string name="totalCostOfGasoline">Custo total da gasolina: R$ %s</string>
    <string name="meal">Refeição</string>
    <string name="numberOfMealsPerDay">Quantidade de refeições por dia</string>
    <string name="totalMealCost">Custo total de refeições: R$ %s</string>
    <string name="totalNights">Total de noites</string>
    <string name="totalRooms">Total de quartos</string>
    <string name="totalAccommodationCost">Custo total da hospedagem: R$ %s</string>
    <string name="entertainments">Entretenimentos</string>
    <string name="totalEntertainmentCost">Custo total dos entretenimentos: R$ %s</string>
    <string name="addTravel">Adicionar viagem</string>
    <string name="averageCostPerNight">Custo médio por noite</string>
    <string name="numberOfTimes">Quantidade de vezes</string>
    <string name="total">Total</string>
    <string name="insertTravelDestination">Insira o destino da viagem</string>
    <string name="travelDate">Data da viagem</string>
    <string name="real">R$ %s</string>
    <string name="cardTravelDate">Data da viagem: %s</string>
    <string name="cardTravelDestination">Destino: %s</string>
    <string name="cardTravelTotalPeople">Viajantes: %d pessoas</string>
    <string name="cardTravelDuration">Duração: %d dias</string>
    <string name="cardPlaneCostPerPerson">R$ %s por pessoa</string>
    <string name="cardPlaneVehicleRental">Aluguel veículo: R$ %s</string>
    <string name="totalReal">Total: R$ %s</string>
    <string name="cardCarAverageCostPerLiter">R$ %s por litro</string>
    <string name="cardCarAverageKmPerLiter">%.1fkm por litro</string>
    <string name="cardCarNumberOfVehicles">%d carros</string>
    <string name="cardCarTotalEstimatedKm">Distância estimada: %.1fkm</string>
    <string name="cardMealAverageCostPerMeal">R$ %s por refeição</string>
    <string name="cardMealMealsPerDay">%d refeições por dia</string>
    <string name="cardAccommodationAverageCostPerNight">R$ %s por noite</string>
    <string name="cardAccommodationTotalNights">%d noite(s)</string>
    <string name="cardAccommodationTotalRooms">%d quarto(s)</string>
    <string name="moreDetails">Mais detalhes</string>
    <string name="sync">Sincronizar</string>
</resources>