<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/steel_blue"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:src="@drawable/image_icon" />

    <EditText
        android:id="@+id/nomeTxf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entertainmentName"
        android:inputType="textEmailAddress"
        android:padding="15dp" />

    <EditText
        android:id="@+id/precoTxf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:padding="15dp" />

    <EditText
        android:id="@+id/qtdaPessoasTxf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/amountOfPeople"
        android:inputType="number"
        android:padding="15dp" />

    <EditText
        android:id="@+id/qtdaVezesTxf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/numberOfTimes"
        android:inputType="number"
        android:padding="15dp" />

</LinearLayout>