<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/topLinearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="30dp"
        android:gravity="fill_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottomLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accommodation"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/values"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/custoMedioPorNoiteTxf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_rounded_corner"
            android:backgroundTint="@color/dark_gray"
            android:hint="@string/averageCostPerNight"
            android:inputType="numberDecimal"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/medium_gray"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/totalDeNoitesTxf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_rounded_corner"
            android:backgroundTint="@color/dark_gray"
            android:hint="@string/totalNights"
            android:inputType="number"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/medium_gray"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/totalDeQuartosTxf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_rounded_corner"
            android:backgroundTint="@color/dark_gray"
            android:hint="@string/totalRooms"
            android:inputType="number"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/medium_gray"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLinearLayout">

        <Button
            android:id="@+id/backBtnHospedagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/dark_gray"
            android:text="@string/goBack"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/mentha_green"
            android:text="@string/entertainment"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>