<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/cardParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:src="@drawable/baseline_arrow_back_24" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewViagem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_rounded_corner"
            android:backgroundTint="@color/dark_gray"
            android:clickable="false"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Viagem"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/viewDATA_VIAGEM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardTravelDate"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/viewDESTINO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardTravelDestination"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/viewQTDA_DE_VIAJANTES"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardTravelTotalPeople"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/viewDURACAO_VIAGEM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardTravelDuration"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/viewTOTAL_VIAGEM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/totalReal"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/moreDetails"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewAviao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_rounded_corner"
            android:backgroundTint="@color/dark_gray"
            android:clickable="false"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/plane"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/viewCUSTO_POR_PESSOA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardPlaneCostPerPerson"
                    android:textColor="@color/white"
                    android:textSize="15sp">

                </TextView>

                <TextView
                    android:id="@+id/viewALUGUEL_VEICULO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardPlaneVehicleRental"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/viewAviaoTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/totalReal"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewCarro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_rounded_corner"
            android:backgroundTint="@color/dark_gray"
            android:clickable="false"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/car"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/viewCUSTO_MEDIO_LITRO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardCarAverageCostPerLiter"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/viewMEDIA_KM_LITRO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardCarAverageKmPerLiter"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/viewTOTAL_VEICULO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardCarNumberOfVehicles"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/viewTOTAL_ESTIMADO_KM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardCarTotalEstimatedKm"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/viewCarroTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/totalReal"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewRefeicao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_rounded_corner"
            android:backgroundTint="@color/dark_gray"
            android:clickable="false"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/meal"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/viewCUSTO_ESTIMADO_POR_REFEICAO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardMealAverageCostPerMeal"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/viewQTDA_REFEICAO_POR_DIA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardMealMealsPerDay"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/viewRefeicaoTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/totalReal"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewHospedagem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_rounded_corner"
            android:backgroundTint="@color/dark_gray"
            android:clickable="false"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/accommodation"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/viewCUSTO_MEDIO_POR_NOITE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardAccommodationAverageCostPerNight"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/viewTOTAL_DE_NOITE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardAccommodationTotalNights"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/viewTOTAL_QUARTOS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardAccommodationTotalRooms"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/viewHospedagemTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/totalReal"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewEntertainment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_rounded_corner"
            android:backgroundTint="@color/dark_gray"
            android:clickable="false"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/entertainment"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/viewENTRETENIMENTO_TOTAL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/totalReal"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

<!--        <LinearLayout-->
<!--            android:id="@+id/cardEntertainment"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="350dp"-->
<!--            android:layout_margin="10dp"-->
<!--            android:orientation="vertical">-->

<!--            <ListView-->
<!--                android:id="@+id/viewListEntretenimento"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="0dp"-->
<!--                android:layout_weight="1"-->
<!--                android:background="@drawable/listview_rounded_corner" />-->
<!--        </LinearLayout>-->

    </LinearLayout>
</ScrollView>